reform some value

--- a/views/add-product.html
+++ b/views/add-product.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Add product</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/product.css" />
   </head>
   <body>
     <header class="main-header">
       <nav class="main-header__nav">
         <ul class="main-header__item-list">
-          <li class="main-header__item"><a  href="/">Shop</a></li>
+          <li class="main-header__item"><a href="/">Shop</a></li>
           <li class="main-header__item">
             <a class="active" href="/admin/add-product">Add Product</a>
           </li>
@@ -26,9 +26,10 @@
           <input type="text" name="title" id="title" />
         </div>
 
-        <button type="submit">Add Product</button>
+        <button class="btn" type="submit">Add Product</button>
       </form>
     </main>
+
     <div class="footer"></div>
   </body>
 </html>
