some code clean up

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,9 +1,9 @@
-<%- include('./includes/head.ejs') %>
-  </head>
-  <body>    
-        <%- include('./includes/navigation.ejs') %>
-    <main>
-      <h1>The page you are looking not found</h1>
-    </main>
-    <%- include('./includes/end.ejs') %>
-    
+<%- include('includes/head.ejs') %>
+</head>
+
+<body>
+  <%- include('includes/navigation.ejs') %>
+  <main>
+  <h2>Page you are looking for does not exist</h2>
+  </main>
+<%- include('includes/end.ejs') %>
