--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -13,8 +13,8 @@
                 <input type="text" name="title" id="title">
             </div>
             <div class="form-control">
-                <label for="imageeUrl">Image Url</label>
-                <input type="text" name="imageeUrl" id="imageeUrl">
+                <label for="imageUrl">Image Url</label>
+                <input type="text" name="imageUrl" id="imageUrl">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
