--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -23,7 +23,10 @@
                                     <p class="product__description"><%= product.description %></p>
                                 </div>
                                 <div class="card__actions">
-                                    <button class="btn">Add to Cart</button>
+                                    <a class="btn" href="/admin/edit-product">Edit</a>
+                                    <form action="/admin/delete-product" method="post">
+                                        <button class="btn danger" type="submit">delete</button>
+                                    </form>
                                 </div>
                             </article>
                         <% } %>
