--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,8 +2,7 @@
 </head>
 
 <body>
-  <%- include('includes/navigation.ejs') %>
-  <main>
-  <h2>Page you are looking for does not exist</h2>
-  </main>
+    <%- include('includes/navigation.ejs') %>
+    <h1>Page Not Found!</h1>
+
 <%- include('includes/end.ejs') %>
