--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -28,8 +28,13 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product._id %>" class="btn">Details</a>
-                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                    <% if(isAuthenticated){ %>                        
+                                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                    <% }else{ %>
+                                        <a href="/login" class="btn">Login</a>                            
+                                    <% } %>
                                 </div>
+                                
                             </article>
                             <% } %>
                     </div>
