--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -22,8 +22,12 @@
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
+                        <% if(isAuthenticated){ %>                        
                             <%- include('../includes/add-to-cart.ejs', {product: product}) %>
-                        </div>
+                        <% }else{ %>
+                                <a href="/login" class="btn">Login</a>                            
+                        <% } %>
+                    </div>
                     </article>
                 <% } %>
             </div>
