--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -8,14 +8,16 @@
 
     <main>
         <%- include('../includes/messages.ejs') %>
-        <form class="login-form" action="/reset" method="POST">
+        <form class="login-form" action="/new-password" method="POST">
             <input type="hidden" name="_csrf"  value="<%= csrfToken %>">
+            <input type="hidden" name="userId"  value="<%= userId %>">
+            
             <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password">
             </div>
             
-            <button class="btn" type="submit">Reset Password</button>
+            <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
