--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <%- include('../includes/messages.ejs') %>
-        <form class="login-form" action="/signup" method="POST">
+        <form class="login-form" action="/signup" method="POST" novalidate>
             <input type="hidden" name="_csrf"  value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="email">E-Mail</label>
@@ -22,7 +22,7 @@
                 <label for="confirmPassword">Confirm Password</label>
                 <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
-            <button class="btn" type="submit">Login</button>
+            <button class="btn" type="submit">Signup</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
