adding 500 page for server error

--- a/views/includes/messages.ejs
+++ b/views/includes/messages.ejs
@@ -1,3 +1,4 @@
+<% console.log(errorMessage) %> 
 <% if(errorMessage){ %> 
 <% errorMessage.forEach(eMsg=>{ %> 
     <div class="user-message user-message--error"><%= eMsg %></div>
@@ -13,6 +14,12 @@
 <% if(successMessage){ %> 
     <% successMessage.forEach(sMsg=>{ %> 
         <div class="user-message user-message--success"><%= sMsg %></div>
+        <% }) %> 
+       
+<% } %> 
+<% if(errorMessageSystem){ %> 
+    <% errorMessageSystem.forEach(eMsg=>{ %> 
+        <div class="user-message user-message--error"><strong><%= eMsg.param %>: </strong><%=  eMsg.msg %></div>
         <% }) %> 
        
 <% } %> 
