--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <%- include('../includes/messages.ejs') %>
-        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data">
             <input type="hidden" name="_csrf"  value="<%= csrfToken %>">
             <div class="form-control">
                 <label for="title">Title</label>
@@ -16,11 +16,16 @@
                 class="<%= errorMessageValidator.find(e=> e.param === 'title')?'invalid':''%>"
                  type="text" name="title" id="title" value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input 
                 class="<%= errorMessageValidator.find(e=> e.param === 'imageUrl')?'invalid':''%>"
                 type="text" name="imageUrl" id="imageUrl" value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
+            </div> -->
+            <div class="form-control">
+                <label for="image">Image</label>
+                <input 
+                type="file" name="image" id="image" >
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
