uploading images and displaying them

--- a/views/includes/messages.ejs
+++ b/views/includes/messages.ejs
@@ -1,24 +1,27 @@
-<% console.log(errorMessage) %> 
 <% if(errorMessage){ %> 
 <% errorMessage.forEach(eMsg=>{ %> 
+    
     <div class="user-message user-message--error"><%= eMsg %></div>
     <% }) %> 
    
 <% } %> 
 <% if(errorMessageValidator){ %> 
 <% errorMessageValidator.forEach(eMsg=>{ %> 
+   
     <div class="user-message user-message--error"><strong><%= eMsg.param %>: </strong><%=  eMsg.msg %></div>
     <% }) %> 
    
 <% } %> 
 <% if(successMessage){ %> 
     <% successMessage.forEach(sMsg=>{ %> 
+      
         <div class="user-message user-message--success"><%= sMsg %></div>
         <% }) %> 
        
 <% } %> 
 <% if(errorMessageSystem){ %> 
     <% errorMessageSystem.forEach(eMsg=>{ %> 
+        <% console.log('hi4') %>
         <div class="user-message user-message--error"><strong><%= eMsg.param %>: </strong><%=  eMsg.msg %></div>
         <% }) %> 
        
