--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -5,6 +5,7 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
+            <%- include('../includes/messages.ejs') %>
             <% if(orders.length <= 0) {%>
             <h1>Nothing there!</h1>
             <% } else { %>
